[tool.poetry]
name = "pycounts_aleung"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Adrianne Leung"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
